--- a/styles/components/container.scss
+++ b/styles/components/container.scss
@@ -4,3 +4,15 @@
   margin: 0 auto;
   padding: 0 35px;
 }
+
+.container-section {
+   margin-top: 30px;
+}
+
+.container_properties {
+ background: linear-gradient(180deg, #3396E6 0%, #76C0FC 100%);
+border-radius: 0 0 20px 20px;
+  margin-top: 100px;
+  height: 125px;
+  color: $color-white;
+}
